Ensure correct alignment of Pixabay search button

--- a/base/inc/fields/css/media-field.less
+++ b/base/inc/fields/css/media-field.less
@@ -151,13 +151,17 @@
 
 		.so-widgets-search-button {
 			position: absolute;
-			padding: 9px 14px;
+			padding: 0 14px;
 			font-size: 1.2em;
 			height: 100%;
 			top: 0;
 			right: 320px;
 			border-width: 1px;
 			box-shadow: none;
+
+			.dashicons-search {
+				vertical-align: middle;
+			}
 		}
 	}
 
